# samsara-loop

./: .vercelignore  LICENSE  README.md  pyproject.toml  setup.py
api/: index.py
samsara_loop/: __init__.py  core.py  demo_app.py  trajectory_scorer.py  types.py  vercel.json
samsara_loop/api/: eval.py  profile.py  run.py
samsara_loop/cli/: cli.py
samsara_loop/db/: __init__.py  database.py
samsara_loop/mcp/: __init__.py  server.py
samsara_loop/static/: index.html
samsara_loop/web/: app.py
tests/: conftest.py  test_loop_engine.py  test_trajectory_scorer.py  test_web_dashboard.py
tests/report/: index.html
