[project]
name = "samsara-loop"
version = "0.1.0"
description = "Agent feedback loop engine — capture failures, generate tests, self-evaluate"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
samsara-loop = "samsara_loop.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
